# ChainLogistics

./: .gitignore  Contributing.md  pr.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 20240103000000_create_digital_twin_tables.sql
backend/src/: error.rs  handlers.rs  main.rs  models.rs  services.rs
backend/src/handlers/: digital_twin.rs
backend/src/models/: digital_twin.rs
backend/src/services/: digital_twin_service.rs
docs/: DEPLOYMENT_GUIDE.md  DIGITAL_TWIN.md  INFRASTRUCTURE.md
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(marketing)/: page.tsx
frontend/components/: ErrorBoundary.tsx  LanguageSelector.tsx  ProgressModal.tsx  RetryButton.tsx
frontend/components/__tests__/: accessibility.test.tsx
frontend/components/blockchain/: BlockchainSelector.tsx
frontend/components/forms/: EventTrackingForm.tsx  EventTypeSelector.tsx  FormStepIndicator.tsx  ProductRegistrationForm.tsx
frontend/components/layouts/: Hero.tsx  NavBar.tsx  Navigation.tsx
frontend/components/products/: ProductCard.tsx  ProductFilters.tsx  ProductList.tsx
frontend/components/tracking/: RealtimeEventListener.tsx  Timeline.tsx
frontend/components/ui/: Button.test.tsx  EmptyState.tsx  SearchInput.tsx  (+3 more)
frontend/lib/: errors.ts  feedback.ts  qr.test.ts  utils.test.ts
frontend/locales/: en.json  es.json
frontend/playwright-report/: index.html
frontend/test-results/: .last-run.json
smart-contract/: .env  Cargo.toml
(+58 files in other folders)
